# Playdate-C

./: .gitignore  CMakeLists.txt  LICENSE  README.md
Source/: main.c  pdxinfo
